# graphology

./: .gitignore  README.md  analysis.ipynb  app.py  fetching.py  mining.py  processing.py  pyproject.toml  requirements.txt
graphology/: __init__.py  _logger.py  helpers.py
graphology/acquiring/: fetching.py
graphology/acquisition/: constants.py  fetcher.py  fetching.py  processing.py  processor.py
graphology/analysis/: community_detection.py  projection.py
graphology/database/relational/: create.py  entities.py  loader.py  populate.py
graphology/etl/: __init__.py  _helpers.py  pipeline.py
graphology/etl/extract/: extractor.py
graphology/etl/load/: __init__.py
graphology/etl/load/gdbms/: database.py  loader.py
graphology/etl/load/rdbms/: database.py  entities.py  loader.py
graphology/etl/transform/: __init__.py  transformer.py
scripts/: cptsv.sh  rmdb.sh
src/acquiring/: fetching.py  processing.py
